--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,17 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
+      type="text/css"
+      media="print"
+      onload="this.media='all'" 
     />
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet"
+        type="text/css"
+      />
+    </noscript>
     %sveltekit.head%
     <!-- 100% privacy-first analytics -->
     <script
